# openedx-plugin-nacar

./: MANIFEST.in  Makefile  README.md  __about__.py  pyproject.toml  setup.py
doc/masterclass/: README.md
openedx_plugin/: README.md  __about__.py  admin.py  apps.py  forms.py  message_types.py  message_types.py:  middleware.py  models.py  signals.py  urls.py  utils.py  views.py  waffle.py
openedx_plugin/api/: README.md  serializers.py  urls.py  views.py
openedx_plugin/dashboard/: utils.py  views.py
openedx_plugin/locale/: README.md  utils.py  views.py
openedx_plugin/migrations/: 0001_initial.py  0003_auto_20230615_1732.py
openedx_plugin/scripts/: init-db.sql
openedx_plugin/settings/: common.py
openedx_plugin/static/style/: custom.css
openedx_plugin/templates/courseware/: course_navigation.html  tabs.html
openedx_plugin/templates/instructor/instructor_dashboard_2/: course_info.html  data_download.html  extensions.html  instructor_dashboard_2.html  membership.html  student_admin.html
openedx_plugin/templates/openedx_plugin/: course_bulk_enroll.html  enrollment_list.html
openedx_plugin/templates/widgets/: footer.html  sock.html
openedx_plugin_api/: __about__.py  admin.py  api.py  apps.py  models.py  signals.py  urls.py  utils.py  waffle.py
openedx_plugin_api/tests/: test_edxapi_endpoints.py
openedx_plugin_cms/: README.md  __about__.py  __init__.py  admin.py  apps.py  auditor.py  forms.py  models.py  signals.py  urls.py  utils.py  waffle.py
openedx_plugin_cms/data/: demo_course_xml_data.txt
openedx_plugin_cms/management/commands/: course_audit.py  eval_course.py
openedx_plugin_cms/migrations/: 0001_initial.py  __init__.py
openedx_plugin_cms/settings/: common.py  production.py
openedx_plugin_cms/templates/: course_audit.html  course_audit_html.html  course_change_log.html  index.html
openedx_plugin_cms/templates/cms/templates/widgets/: footer.html
openedx_plugin_cms/templates/course_template/: private.json
openedx_plugin_cms/templates/course_template/private/: course.xml
openedx_plugin_cms/templates/course_template/private/about/: short_description.txt
openedx_plugin_cms/templates/course_template/private/chapter/: WEEK_1.xml  week_1.xml
openedx_plugin_cms/templates/course_template/private/course/: course.xml
openedx_plugin_cms/templates/course_template/private/course_info/: updates.html
openedx_plugin_cms/templates/course_template/public/: course.xml
openedx_plugin_cms/templates/openedx_plugin_cms/: bulk_enrollment.html
openedx_plugin_cms/templates/widgets/: footer.html  sock.html
openedx_plugin_cms/views/: __init__.py  bulk_enrollment.py  change_log.py  course_audit.py  course_audit_html.py  course_listing.py
openedx_plugin_mobile_api/: README.rst  __about__.py  apps.py  waffle.py
openedx_plugin_mobile_api/settings/: common.py
requirements/: common.in  common_constraints.txt  constraints.txt
(+27 files in other folders)
